# serumdex

./: Cargo.toml
assert-owner/: Cargo.toml
assert-owner/src/: lib.rs
common/: Cargo.toml
common/src/: program.rs
common/src/client/: mod.rs  rpc.rs
dex/: Cargo.toml
dex/crank/: Cargo.toml  build.out
dex/crank/src/: lib.rs  token_instruction.rs
dex/fuzz/: Cargo.toml
dex/fuzz/fuzz_targets/: multiple_orders.rs
dex/fuzz/src/: lib.rs
dex/permissioned/: Cargo.toml
dex/permissioned/src/: middleware.rs  proxy.rs
dex/src/: error.rs  instruction.rs  lib.rs  matching.rs  state.rs  tests.rs
dex/tests/permissioned/: Cargo.toml  package.json
dex/tests/permissioned/programs/permissioned-markets/: Cargo.toml
dex/tests/permissioned/programs/permissioned-markets/src/: lib.rs
dex/tests/permissioned/tests/: permissioned-markets.js
dex/tests/permissioned/tests/utils/: faucet.js  market-lister.js  market-proxy.js
pool/: Cargo.toml
pool/examples/admin-controlled/: Cargo.toml
pool/examples/admin-controlled/src/: lib.rs
pool/examples/simple/: Cargo.toml
pool/schema/: Cargo.toml
pool/schema/src/: schema.rs
pool/src/: context.rs  lib.rs  pool.rs
