[package]
name = "serum_dex"
version = "0.4.0"
description = "Serum DEX"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"
license = "Apache-2.0"
authors = [ "Serum Foundation <foundation@projectserum.com>" ]

[features]
program = [ ]
client = [ ]
fuzz = [ "arbitrary" ]
test = [ ]
default = [ "program" ]
no-entrypoint = [ ]

[dependencies]
serde = "1.0.114"
itertools = "0.9.0"
without-alloc = "0.2.1"
num_enum = "0.5.0"
static_assertions = "1.1.0"
bincode = "1.3.1"
enumflags2 = "0.6.4"
field-offset = "0.3.4"
thiserror = "1.0.20"
safe-transmute = "0.11.0"
num-traits = "0.2.12"
arrayref = "0.3.6"
byteorder = "1.3.4"

  [dependencies.arbitrary]
  version = "0.4.6"
  features = [ "derive" ]
  optional = true

  [dependencies.bytemuck]
  version = "1.4.0"

  [dependencies.safecoin-program]
  path = "../../Safecoin/sdk/program"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../safecoin-program-library/token/program"

[lib]
crate-type = [ "cdylib", "lib" ]

[dev-dependencies]
rand = "0.7.3"
hexdump = "0.1.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"

  [dev-dependencies.bumpalo]
  version = "3.4.0"
  features = [ "collections" ]

[profile.release]
lto = true

[profile.test]
opt-level = 2
