[package]
name = "serum-pool-schema"
version = "0.1.0"
authors = [ "Sebastian Conybeare <sebastian@projectserum.com>" ]
edition = "2018"

[features]
program = [ ]
default = [ ]

[dependencies]
serum-borsh = "0.8.1-serum.1"

  [dependencies.safecoin-program]
version = "1.7.17"

[[bin]]
name = "print-schema"
path = "src/print-schema.rs"
