[package]
name = "serum-pool-admin-controlled"
version = "0.1.0"
description = "Simple serum pool"
edition = "2018"

[features]
no-entrypoint = [ ]
program = [ ]
default = [ ]

[dependencies]
serum-borsh = "0.8.1-serum.1"

  [dependencies.serum-pool]
  version = "0.1.0"
  path = "../.."

  [dependencies.safecoin-program]
version = "1.7.17"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
version = "3.2.0"

[lib]
name = "serum_pool_examples_admin_controlled"
crate-type = [ "cdylib", "lib" ]
